--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -52,6 +52,7 @@ deconf:
     trackFilter: Track
     themeFilter: Theme
     recordedFilter: Is Recorded
+    languageFilter: Language
     offLabel: All
     'yes': 'Yes'
     'no': 'No'
