feat(session): add button to contact host if set

--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -245,3 +245,7 @@ ifrc:
     playing: تشغيل
     buffering: جاهز للتشغيل
     ready: مستعد للعب
+
+  contactHost:
+    #label: Need help with this session?
+    action: التواصل مع مضيف الجلسة
