fix: update i18n strings

--- a/src/i18n/es.yml
+++ b/src/i18n/es.yml
@@ -247,5 +247,5 @@ ifrc:
     ready: preparado para reproducir
 
   contactHost:
-    #label: Need help with this session?
+    label: ¿Necesita ayuda a propósito de esta sesión?
     action: Contactar el anfitrión
