fix: update i18n strings

--- a/src/i18n/en.yml
+++ b/src/i18n/en.yml
@@ -310,7 +310,7 @@ ifrc:
 
   contactHost:
     label: Need help with this session?
-    action: Contact Host
+    action: Contact Organiser
 #
 # ============================== OLD ==============================
 #
