--- a/src/i18n/ar.yml
+++ b/src/i18n/ar.yml
@@ -247,5 +247,5 @@ ifrc:
     ready: مستعد للعب
 
   contactHost:
-    #label: Need help with this session?
+    label: هل تحتاج إلى مساعدة في هذه الجلسة؟
     action: التواصل مع مضيف الجلسة
