--- a/src/i18n/es.yml
+++ b/src/i18n/es.yml
@@ -108,6 +108,7 @@ deconf:
     register: Registrarse
     unavailable: ' (Indisponible)'
 
+  # TODO
   whatsOn:
     #title: What's On
     #infoText: Browse the Schedule before release day
